conf/iptables.rules
# Generated by iptables-save v1.6.0 on Wed Feb 15 18:17:53 2017
## empty mangle
*mangle
:PREROUTING ACCEPT [94831:22343435]
:INPUT ACCEPT [80992:16498451]
:FORWARD ACCEPT [13839:5844984]
:OUTPUT ACCEPT [66567:23344683]
:POSTROUTING ACCEPT [77604:28889677]
COMMIT
# Completed on Wed Feb 15 18:17:53 2017
# Generated by iptables-save v1.6.0 on Wed Feb 15 18:17:53 2017
## empty raw
*raw
:PREROUTING ACCEPT [97317:23142153]
:OUTPUT ACCEPT [68755:24169029]
COMMIT
# Completed on Wed Feb 15 18:17:53 2017
# Generated by iptables-save v1.6.0 on Wed Feb 15 18:17:53 2017
*filter
## default policy drop for input forward and output
:INPUT DROP [3:176]
:FORWARD DROP [0:0]
:OUTPUT DROP [1:76]
## to sshd, RELATED? 
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## to http
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## to https 
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## localhost
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
## to shadowsocks 
-A INPUT -p tcp -m tcp --dport 8000 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## shadowsocks get https pages result
-A INPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## resolver get dns results
-A INPUT -p udp -m udp --sport 53 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## to ipsec charon
-A INPUT -p udp -m udp --dport 500 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## to ipsec charon
-A INPUT -p udp -m udp --dport 4500 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## encrypted request data
-A INPUT -i ens3 -p esp -j ACCEPT
## git.ssh pull
-A INPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## curl pages result
-A INPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## ping request
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
## forward data through ipsec inner net
-A FORWARD -s 10.31.2.0/24 -j ACCEPT
## related to 10.31, all good
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
## localhost
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
## to sshd's client 
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## to http's client
-A OUTPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## to https' client
-A OUTPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## to shadowsocks' client
-A OUTPUT -p tcp -m tcp --sport 8000 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## shadowsocks get https pages request
-A OUTPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## resolver send dns request
-A OUTPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## ipsec send data
-A OUTPUT -p udp -m udp --sport 500 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## ipsec send data
-A OUTPUT -p udp -m udp --sport 4500 -m conntrack --ctstate ESTABLISHED -j ACCEPT
## git.ssh push
-A OUTPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## curl http get
-A OUTPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
## response ping
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
COMMIT
# Completed on Wed Feb 15 18:17:53 2017
# Generated by iptables-save v1.6.0 on Wed Feb 15 18:17:53 2017
*nat
:PREROUTING ACCEPT [699:43990]
:INPUT ACCEPT [430:26349]
:OUTPUT ACCEPT [985:75806]
:POSTROUTING ACCEPT [431:36566]
## ipsec's source nat
-A POSTROUTING -s 10.31.2.0/24 -o ens3 -j SNAT --to-source 45.32.75.97
COMMIT
# Completed on Wed Feb 15 18:17:53 2017
